added put and delete

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,15 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/notification.css">
+    
 </head>
 <body>
-    <h1>Welcome</h1>
     <ul>
-        <li><a href="/notification">Check the notification page</a>
+        <li>
+            <a href="/notification">Notifications</a>
         </li>
-        <li><a href="/profile">Your profile</a>
+        <li>
+            <a href="/profile">Profile</a>
         </li>
     </ul>
+    <div>
+         <h1>Welcome</h1>
+    </div>
     
 </body>
 </html>
