--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/notification.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+
     <title>Profile</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">Go back to Homepage</a></li>
+        </ul>
+    </nav>
+<div>
     <h1>Your profile</h1>
-    
+
     <form action="/profile/postOne" method="POST">
         <input type="text" name="notification">
         <button type="submit"> POST</button>
     </form>
-
+</div>
 
 </body>
 </html>
