--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,12 +11,8 @@
 </head>
 <body>
     <ul>
-        <li>
-            <a href="/notification">Notifications</a>
-        </li>
-        <li>
-            <a href="/profile">Profile</a>
-        </li>
+        <li><a href="/login"> Login</a></li>
+        <li></li><a href="/signup"> Signup</a></li>
     </ul>
     <div>
          <h1>Welcome</h1>
