added new routes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,8 +11,8 @@
 </head>
 <body>
     <ul>
-        <li><a href="/login"> Login</a></li>
-        <li></li><a href="/signup"> Signup</a></li>
+        <li><a class="nav"  href="/login"> Login</a></li>
+        <li></li><a  class="nav" href="/signup"> Signup</a></li>
     </ul>
     <div>
          <h1>Welcome</h1>
