--- a/public/css/notification.css
+++ b/public/css/notification.css
@@ -14,6 +14,9 @@ body{
     height: 100vh;
     gap: 10%;
 }
+.nav{
+    font-size: 2.5rem;
+}
 h1{
     font-size: 5rem;
 
@@ -22,12 +25,9 @@ li{
     margin-bottom: 10px;  
     list-style: none;
 }
-a {
-    font-size: 2.5rem;
+a{
     color: #000;
     text-decoration: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-
 }
 .container{
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
@@ -67,7 +67,7 @@ textarea {
     resize: none;
   }
 ul{
-    height: 80vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
