--- a/views/notificationBoard.ejs
+++ b/views/notificationBoard.ejs
@@ -28,13 +28,17 @@
    <div class="container" >
 <p class="informationContainer"><span id="extraInfo">
     <a href='/profile/<%=el.user_id%>'><%= el.userName%></a> <%= el.date%></span><br>
-    <%= el.info%></p>
+    <a href='/notification/<%= el.id%>'><%= el.info%></a></p>
 <div class="extra" data-id="<%=el._id%>">
     <span>likes : <%=el.likes%></span>
-<span class="gg-math-plus"></span>
-<span class="gg-math-minus"></span>
+    <% if (id != el.user_id) { %>
+        <span class="gg-math-plus"></span>
+        <span class="gg-math-minus"></span>        <%}  %>
 
-<span class="gg-trash"></span>
+<% if (id == el.user_id) { %>
+    <span class="gg-trash"></span>
+    <%}  %>
+
 </div>
    </div>
 
