--- a/views/profileById.ejs
+++ b/views/profileById.ejs
@@ -14,10 +14,13 @@
          <%= el.info%></p>
      <div class="extra" data-id="<%=el._id%>">
          <span>likes : <%=el.likes%></span>
+         
      <span class="gg-math-plus"></span>
      <span class="gg-math-minus"></span>
      
-     <span class="gg-trash"></span>
+     <% if (id == el.user_id) { %>
+        <span class="gg-trash"></span>
+        <%}  %>
      </div>
         </div>
      
