more work on comments

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/notification.css">
-    
+    <link type="text/css" rel="stylesheet" href="css/notification.css" />
+
+
 </head>
 <body>
     <ul>
