--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/notification.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link href='https://css.gg/trash.css' rel='stylesheet'>
+    <link type="text/css" rel="stylesheet" href="css/notification.css" />
 
     <title>Profile</title>
 </head>
